--- a/gb/21/8/25/n13187771.md
+++ b/gb/21/8/25/n13187771.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/blfjkf3657/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/blfjkf3657/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/blfjkf3657/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/blfjkf3657/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/blfjkf3657/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/blfjkf3657/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/blfjkf3657/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/blfjkf3657/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/blfjkf3657/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/blfjkf3657/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/blfjkf3657/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/blfjkf3657/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/blfjkf3657/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/blfjkf3657/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/blfjkf3657/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/blfjkf3657/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/blfjkf3657/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/blfjkf3657/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/blfjkf3657/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/blfjkf3657/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/blfjkf3657/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/blfjkf3657/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/blfjkf3657/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/blfjkf3657/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/blfjkf3657/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/blfjkf3657/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/blfjkf3657/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/blfjkf3657/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/blfjkf3657/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/blfjkf3657/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/blfjkf3657/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/blfjkf3657/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/blfjkf3657/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/blfjkf3657/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/blfjkf3657/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/blfjkf3657/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/blfjkf3657/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/blfjkf3657/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/blfjkf3657/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/blfjkf3657/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/blfjkf3657/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/blfjkf3657/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/blfjkf3657/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/blfjkf3657/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/blfjkf3657/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/blfjkf3657/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/blfjkf3657/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>王友群：习近平为何17个多月没出国访问？</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/08/id13187773-6ad5e9301feaf8ff7e3e6deaa75cc169-600x400.jpeg" />
 <h6></h6>
 <hr>
-	<p>【大纪元2021年08月26日讯】<ahref="https://github.com/blfjkf3657/djy/blob/master/gb/tag/20%E5%9B%BD%E9%9B%86%E5%9B%A2%E5%B3%B0%E4%BC%9A.md#1">20国集团峰会</a>将于10月30日至31日在意大利首都罗马举行。8月24日，香港《南华早报》报导，由于中共考虑以视频方式出席G20峰会，中共国家主席<ahref="https://github.com/blfjkf3657/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>和美国总统<ahref="https://github.com/blfjkf3657/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB.md#1">拜登</a>的面对面会晤可能会进一步推后。</p>
+	<p>【大纪元2021年08月26日讯】<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/20%E5%9B%BD%E9%9B%86%E5%9B%A2%E5%B3%B0%E4%BC%9A.md#1">20国集团峰会</a>将于10月30日至31日在意大利首都罗马举行。8月24日，香港《南华早报》报导，由于中共考虑以视频方式出席G20峰会，中共国家主席<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>和美国总统<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB.md#1">拜登</a>的面对面会晤可能会进一步推后。</p>
 <p>如果习、拜不能在罗马会晤，这将是1997年以来美国新上任总统与中共领导人会晤时间最晚的一次。</p>
-<p>这个消息是否属实，有待证实。但是，有一点很清楚，从去年1月17-18日访问缅甸之后，<ahref="https://github.com/blfjkf3657/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>已有17个多月没出国访问了。</p>
-<p>为什么习近平这么长时间没有迈出国门一步？为什么美国总统<ahref="https://github.com/blfjkf3657/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB.md#1">拜登</a>上任大半年了仍没有“习拜会”？</p>
+<p>这个消息是否属实，有待证实。但是，有一点很清楚，从去年1月17-18日访问缅甸之后，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>已有17个多月没出国访问了。</p>
+<p>为什么习近平这么长时间没有迈出国门一步？为什么美国总统<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB.md#1">拜登</a>上任大半年了仍没有“习拜会”？</p>
 <p>原因很多，比如疫情影响，中共“战狼外交”得罪太多国家，中共对美国及其西方盟友的战略发生变化等。笔者认为，还有一个重要原因，中共二十大前，海外不利于习的消息频传，令习顾虑重重。</p>
 <h2>拜登称习不是他的老朋友</h2>
 <p>6月16日，美俄峰会后，有记者问拜登：是否会以“老朋友对老朋友”的身份，给习近平打电话，要求他向世卫组织专家敞开大门，调查病毒源头？拜登说：“让我直言不讳地说，我们彼此很了解，但不是老朋友，只是工作关系。”</p>
@@ -24,8 +24,8 @@
 <p>拜登此行最后一轮峰会结束后，在记者会上亮明自己的观点：习近平不是我的“老朋友”。这可能是习最不愿听到的一句话，一点面子也没留。</p>
 <p>从2011年年初开始的18个月里，拜登与习近平在美国和中国至少见了8次面。在仅有翻译陪同的情况下，两人共同进餐的时间超过25个小时。BBC曾报道说，拜、习被认为“私交甚笃”。</p>
 <p>然而，到了2021年，拜登在日内瓦当着国际媒体记者的面，竟然说习不是他的“老朋友”，这可不是口误，而是传递了一个重要信号：拜、习可能成了“对手”。</p>
-<h2>“<ahref="https://github.com/blfjkf3657/djy/blob/master/gb/tag/%E6%9B%B4%E9%95%BF%E7%9A%84%E7%94%B5%E6%8A%A5.md#1">更长的电报</a>”矛头直指习</h2>
-<p>1月28日，拜登就任美国总统后的第八天，美国智库“大西洋理事会”发表一篇长达80页的文章《<ahref="https://github.com/blfjkf3657/djy/blob/master/gb/tag/%E6%9B%B4%E9%95%BF%E7%9A%84%E7%94%B5%E6%8A%A5.md#1">更长的电报</a>：迈向新的美国对华战略》。</p>
+<h2>“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9B%B4%E9%95%BF%E7%9A%84%E7%94%B5%E6%8A%A5.md#1">更长的电报</a>”矛头直指习</h2>
+<p>1月28日，拜登就任美国总统后的第八天，美国智库“大西洋理事会”发表一篇长达80页的文章《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9B%B4%E9%95%BF%E7%9A%84%E7%94%B5%E6%8A%A5.md#1">更长的电报</a>：迈向新的美国对华战略》。</p>
 <p>“更长的电报”，源于美国驻苏联外交使团临时代办凯南的“长电报”。1946年2月22日，凯南给美国国务院发了一份长达8000字的电报，提出美国对苏联政策的新方向，即放弃继续在国际事务上与苏联合作的天真幻想，通过媒体教育美国民众了解苏联真相，遏制苏联。此后，美国开始了与苏联持续几十年的“冷战”。</p>
 <p>美国新闻网站Politico在转发《更长的电报》摘要时，将标题改为《对抗中国崛起 美国应针对习近平》，直接点名这篇文章的关键是换掉习近平。</p>
 <p>去年年底，我就听一位朋友讲，美国华尔街的金融巨头准备与华盛顿的政治人物联手换掉习近。这篇文章是否是这华尔街与华盛顿共同行动的一个信号？</p>
@@ -65,41 +65,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/blfjkf3657/djy/blob/master/gb/21/7/26/n13117328.md#1">王友群：中南海内斗激烈的十件大事</a></li>
-<li><a href="https://github.com/blfjkf3657/djy/blob/master/gb/21/8/11/n13153954.md#1">王友群：立陶宛九“杠”中共? 中南海又遇麻烦</a></li>
-<li><a href="https://github.com/blfjkf3657/djy/blob/master/gb/21/8/19/n13174330.md#1">王友群：中共二十大前习近平最担心的是军队</a></li>
-<li><a href="https://github.com/blfjkf3657/djy/blob/master/gb/21/8/23/n13182734.md#1">王友群：汪洋可能成习近平的接班人吗？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/26/n13117328.md#1">王友群：中南海内斗激烈的十件大事</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/8/11/n13153954.md#1">王友群：立陶宛九“杠”中共? 中南海又遇麻烦</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/8/19/n13174330.md#1">王友群：中共二十大前习近平最担心的是军队</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/8/23/n13182734.md#1">王友群：汪洋可能成习近平的接班人吗？</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/19/n9864134.md#1" target="_blank">毛泽东诗词宣扬暴力 为文革武斗输注能量</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/5/n11500416.md#1" target="_blank">滴水穿石 乌克蘭夫妇的坚韧诚心感化民众</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/22/n10326635.md#1" target="_blank">杨宁：“四二五”政治构陷 江派黑手待拿下</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/31/n11489726.md#1" target="_blank">发生在两位西班牙人身上的奇迹</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/gmvniw384/djy/blob/master/gb/21/7/23/n13108843.md#1">【命理】一个人做了坏事欠债可以不还吗？</a></li>
-<li><a href="https://github.com/gmvniw384/djy/blob/master/gb/21/8/22/n13180040.md#1">【未解之谜】首位被FBI公开的外星人</a></li>
-<li><a href="https://github.com/gmvniw384/djy/blob/master/gb/21/8/15/n13163984.md#1">【馨香雅句】你喜欢的颜色吸引哪种能量</a></li>
-<li><a href="https://github.com/gmvniw384/djy/blob/master/gb/21/8/19/n13174434.md#1">【未解之谜】巨星“史泰龙”的前世今生</a></li>
-<li><a href="https://github.com/gmvniw384/djy/blob/master/gb/21/8/22/n13179166.md#1">3岁儿子讲述前世记忆 英国喜剧演员吓坏了</a></li>
-<li><a href="https://github.com/gmvniw384/djy/blob/master/gb/21/8/25/n13185466.md#1">【热点互动】程晓农：中共经济整顿背后玄机</a></li>
-<li><a href="https://github.com/gmvniw384/djy/blob/master/gb/21/8/25/n13185797.md#1">【珍言真语】谢田：中共被迫暂缓香港反制裁法</a></li>
-<li><a href="https://github.com/gmvniw384/djy/blob/master/gb/21/8/25/n13187332.md#1">【直播】布林肯就阿富汗撤离进度发表讲话</a></li>
-<li><a href="https://github.com/gmvniw384/djy/blob/master/gb/21/8/23/n13182734.md#1">王友群：汪洋可能成习近平的接班人吗？</a></li>
-<li><a href="https://github.com/gmvniw384/djy/blob/master/gb/21/8/23/n13182888.md#1">【时事纵横】浙江官场大震荡 与倒习势力有关？</a></li>
-<li><a href="https://github.com/gmvniw384/djy/blob/master/gb/21/8/22/n13180297.md#1">产后复工获赵丽颖助阵 谢娜否认二胎是双胞胎</a></li>
-<li><a href="https://github.com/gmvniw384/djy/blob/master/gb/21/8/22/n13180297.md#1">产后复工获赵丽颖助阵 谢娜否认二胎是双胞胎</a></li>
-<li><a href="https://github.com/gmvniw384/djy/blob/master/gb/21/8/22/n13180163.md#1">暗讽塔利班与中共如出一辙 黄明志微博遭封杀</a></li>
-<li><a href="https://github.com/gmvniw384/djy/blob/master/gb/21/8/24/n13185191.md#1">43岁刘涛晒健身自拍 背后全身镜曝真实身材</a></li>
-<li><a href="https://github.com/gmvniw384/djy/blob/master/gb/21/8/23/n13182574.md#1">黄晓明节目中罕见谈家事 直呼想添个女儿</a></li>
-<li><a href="https://github.com/gmvniw384/djy/blob/master/gb/21/8/24/n13185100.md#1">李英爱7旬夫近照曝光 冻龄外表就像才40岁</a></li>
-<li><a href="https://github.com/gmvniw384/djy/blob/master/gb/21/8/24/n13184158.md#1">哈士奇被遗弃路边 狂追主人车 结局超暖心</a></li>
-<li><a href="https://github.com/gmvniw384/djy/blob/master/gb/21/8/20/n13174964.md#1">黑米可延缓老化、护眼 但你吃对了吗？</a></li>
-<li><a href="https://github.com/gmvniw384/djy/blob/master/gb/21/8/23/n13181640.md#1">美国这条小河的河水 每15分钟才出现一次</a></li>
-<li><a href="https://github.com/gmvniw384/djy/blob/master/gb/21/8/23/n13181173.md#1">小孩房间凌乱不整理？ 这个老爸有奇招克服</a></li>
-<li><a href="https://github.com/gmvniw384/djy/blob/master/gb/21/8/24/n13183737.md#1">鱼缸里都是雌鱼 “女儿国”竟有小鲨鱼出生</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/blfjkf3657/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/blfjkf3657/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/8/25/n13187771.htm">王友群：习近平为何17个多月没出国访问？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/8/25/n13187771.htm">王友群：习近平为何17个多月没出国访问？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/blfjkf3657/djy/blob/master/gb/21/8/25/n13187771.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/blfjkf3657/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/blfjkf3657/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/blfjkf3657/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/blfjkf3657/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/blfjkf3657/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/blfjkf3657/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/blfjkf3657/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/blfjkf3657/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/blfjkf3657/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/blfjkf3657/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/blfjkf3657/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/blfjkf3657/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/blfjkf3657/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/blfjkf3657/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/blfjkf3657/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/blfjkf3657/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/blfjkf3657/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/blfjkf3657/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/blfjkf3657/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/blfjkf3657/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/blfjkf3657/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/blfjkf3657/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/blfjkf3657/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/blfjkf3657/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/blfjkf3657/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/blfjkf3657/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/blfjkf3657/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/blfjkf3657/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/blfjkf3657/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/blfjkf3657/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/blfjkf3657/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/blfjkf3657/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/blfjkf3657/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/blfjkf3657/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/blfjkf3657/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/blfjkf3657/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/blfjkf3657/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/blfjkf3657/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/blfjkf3657/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/blfjkf3657/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/blfjkf3657/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/blfjkf3657/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/blfjkf3657/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/blfjkf3657/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/blfjkf3657/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/blfjkf3657/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/blfjkf3657/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/blfjkf3657/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/8/25/n13187771.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
